tests/regression/errors/basic/import_error_13.csd
// Import error test 13
yeet "nonexistent_module_13"
sus result drip = some_function(13)
